# flashpdf

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  NOTICE  README.en.md  README.md  TODO.md  pyproject.toml
.github/workflows/: build-wheels.yml  ci.yml  release.yml  render-wheels.yml
LICENSES/: LICENSE-PDFium.txt  LICENSE-pdfium-render.txt
crates/fastpdf-core/: Cargo.toml
crates/fastpdf-core/benches/: extraction.rs
crates/fastpdf-core/src/: document.rs  extract.rs  font.rs  image.rs  layout.rs  lib.rs  links.rs  types.rs
crates/fastpdf-core/src/parser/: content_stream.rs  mod.rs  object.rs  recovery.rs  xref.rs
crates/fastpdf-core/tests/: test_object_parser.rs  test_real_pdf.rs  test_xref.rs
crates/fastpdf-py/: Cargo.toml
crates/fastpdf-py/src/: lib.rs
crates/flashpdf-core/: Cargo.toml
crates/flashpdf-core/benches/: extraction.rs
crates/flashpdf-core/src/: document.rs  extract.rs  font.rs  layout.rs  lib.rs  links.rs  outline.rs  render.rs
crates/flashpdf-core/src/parser/: content_stream.rs  recovery.rs  xref.rs
crates/flashpdf-core/tests/: test_object_parser.rs  test_real_pdf.rs
crates/flashpdf-py/: Cargo.toml
crates/flashpdf-py/src/: lib.rs
docs/: API.en.md  API.md  BENCHMARK.md  BENCHMARK_FULL.md  BENCHMARK_RENDER.md  DESIGN_V1.md  DESIGN_V2.md  LIMITATIONS.md  RENDERING.md  RENDER_DEPLOYMENT.md  ROADMAP.md
python/fastpdf/: __init__.py
python/flashpdf/: cli.py
tests/: analyze_bench.py  analyze_render.py  bench_all_libraries.py  bench_corpus.py  bench_fitz_paths.py  bench_liteparse_vs_flashpdf.py  bench_oxide_compare.py  bench_render.py  bench_render_breakdown.py  bench_render_fair.py  bench_render_full.py  bench_text_full.py  comprehensive_benchmark.py  fastpdf_vs_ritz.py  test_cli.py  test_render.py  triage_timeouts.py
