[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "fastpdf-tool"
version = "0.1.0"
description = "The fastest PDF text and image extraction engine. Rust core + Python bindings."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "fastpdf contributors"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Rust",
    "Topic :: Text Processing :: General",
]

[tool.maturin]
features = ["pyo3/extension-module"]
manifest-path = "crates/fastpdf-py/Cargo.toml"
python-source = "python"

[tool.maturin.target.'cfg(target_os = "linux")']
manylinux = "auto"

[tool.maturin.target.'cfg(target_os = "macos")']
macos-deployment-target = "10.15"
