[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "flashpdf"
version = "0.9.1"
description = "The fastest PDF text and image extraction engine. Rust core + Python bindings."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "flashpdf contributors"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Rust",
    "Topic :: Text Processing :: General",
]
dependencies = [
    "click>=8.0",
]

# Render-feature distribution: strategy (a) — single wheel bundles PDFium.
# `pip install flashpdf` ships the render-enabled build with PDFium binary
# under `flashpdf/_pdfium/`. The binary is added to that directory by the
# render-wheels.yml CI job before maturin builds; source/dev builds without
# `--features render` produce a smaller text-only wheel.
# See docs/RENDER_DEPLOYMENT.md for the comparison with strategies (b)/(c).

[project.urls]
Homepage = "https://github.com/justcodew/flashpdf"
Repository = "https://github.com/justcodew/flashpdf"
Documentation = "https://github.com/justcodew/flashpdf/tree/main/docs"
Changelog = "https://github.com/justcodew/flashpdf/blob/main/CHANGELOG.md"
Issues = "https://github.com/justcodew/flashpdf/issues"

[project.scripts]
flashpdf = "flashpdf.cli:main"

[tool.maturin]
features = ["pyo3/extension-module"]
manifest-path = "crates/flashpdf-py/Cargo.toml"
python-source = "python"
# When CI pre-populates python/flashpdf/_pdfium/<lib> before building, maturin
# pulls it into the wheel alongside the .so extension. The runtime lookup in
# crates/flashpdf-core/src/render.rs finds it via flashpdf.__file__ sibling.
# Missing dir (text-only build) is fine — glob matches nothing.
include = [
    { path = "python/flashpdf/_pdfium/**/*", format = "wheel" },
    # maturin auto-includes LICENSE/NOTICE in wheels but NOT in sdist; PyPI
    # rejects the sdist with "License-File X does not exist" because PEP 639
    # metadata declares each. Explicit sdist inclusion fixes the upload.
    { path = "LICENSE", format = "sdist" },
    { path = "NOTICE", format = "sdist" },
    { path = "LICENSES/**/*", format = "sdist" },
]

[tool.maturin.target.'cfg(target_os = "linux")']
manylinux = "auto"

[tool.maturin.target.'cfg(target_os = "macos")']
macos-deployment-target = "10.15"
