[package]
name = "fastpdf-core"
version.workspace = true
edition.workspace = true

[dependencies]
memchr = "2"
fast-float2 = "0.2"
fnv = "1"
smallvec = "1"
flate2 = "1"
memmap2 = "0.9"
rayon = "1"
crc32fast = "1"
zune-png = { version = "0.4", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "extraction"
harness = false

[features]
default = []
gpu = []
debug_columns = []
